--- a/src/styles/app/success.scss
+++ b/src/styles/app/success.scss
@@ -5,12 +5,21 @@
     @apply text-2xl font-bold text-gray-100 text-center;
   }
 
+  &-images {
+    @apply flex items-center justify-center mt-16;
+  }
+
   &-image {
-    @apply w-full max-w-[8.125rem] h-[9rem] rounded-lg p-1 flex items-center justify-center mt-16;
+    @apply w-[9rem] h-[9rem] rounded-full p-1 flex items-center justify-center;
     background: linear-gradient(180deg, #1ea483 0%, #7465d4 100%);
+    box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.8);
 
     img {
       @apply object-cover;
+    }
+
+    & + & {
+      @apply -ml-9;
     }
   }
 
