--- a/src/styles/components/aside.scss
+++ b/src/styles/components/aside.scss
@@ -25,7 +25,7 @@
   }
 
   &-content {
-    @apply py-8 flex flex-col gap-6;
+    @apply py-8 flex flex-col gap-6 overflow-y-auto;
   }
 
   &-card {
@@ -48,7 +48,7 @@
       }
 
       button {
-        @apply mt-auto text-green-500 transition-all duration-200 ease-in-out hover:text-green-300;
+        @apply mt-auto mr-auto text-green-500 transition-all duration-200 ease-in-out hover:text-green-300;
       }
     }
   }
